[workspace]
resolver = "2"

members = [
    "flv_cli/csv_import",
    "flv_cli/iggy_admin",
    "flv_clients/symdb_client",
    "flv_clients/qd_client",
    "flv_common",
    "flv_components/config_manager",
    "flv_components/db_query_manager",
    "flv_components/symbol_manager",
#    "flv_examples/basic_data_stream",
#    "flv_examples/causal_data_inference",
#    "flv_examples/causal_model",
    "flv_examples/symbol_master",
    "flv_proto",
    "flv_sbe/bindings",
    "flv_sbe/sbe_messages",
    "flv_utils/client_utils",
    "flv_utils/iggy_utils",
    "flv_utils/service_utils",
    "flv_services/symdb",
    "flv_services/qdgw",
    "flv_specs/db_specs",
    "flv_specs/exchange_specs",
    "flv_specs/message_specs",
    "flv_specs/service_specs",
]


[workspace.package]
edition = "2021"
rust-version = "1.80.0"
readme = "README.md"
repository = "https://github.com/marvin-hansen/fluvio-examples"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]


# Optimize all crates
[profile.release]
opt-level = 3
lto = true    # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization


# There's a Cargo feature named profile-overrides
# that lets you override the optimization level of dependencies.
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
[profile.release.package."*"]
opt-level = 3
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization


[workspace.dependencies]
#
#Internal crates
#
causal_model = { path = "flv_examples/causal_model" }
common = { path = "flv_common" }
config_manager = { path = "flv_components/config_manager" }
db_query_manager = { path = "flv_components/db_query_manager" }
symbol_manager = { path = "flv_components/symbol_manager" }
proto = { path = "flv_proto" }
qd_client = { path = "flv_clients/qd_client" }
sbe_bindings = { path = "flv_sbe/bindings" }
sbe_messages = { path = "flv_sbe/sbe_messages" }
symdb_client = { path = "flv_clients/symdb_client" }
client_utils = { path = "flv_utils/client_utils" }
iggy_utils = { path = "flv_utils/iggy_utils" }
service_utils = { path = "flv_utils/service_utils" }
db_specs = { path = "flv_specs/db_specs" }
exchange_specs = { path = "flv_specs/exchange_specs" }
message_specs = { path = "flv_specs/message_specs" }
service_specs = { path = "flv_specs/service_specs" }
#
# External crates
#
async-trait = { version = "0.1.77" }
autometrics = { version = "1", features = ["prometheus-exporter"] }
bytes = {version = "1.5.0"}
# chrono default-features = false mitigates "RUSTSEC-2020-0071".
# See https://rustsec.org/advisories/RUSTSEC-2020-0071.html
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
config-file = "0.2"
csv = "1.3"
deep_causality = { git = "https://github.com/marvin-hansen/deep_causality.git", rev = "2a18217bd3f67ea965c67c7ba43935b6ba9c8365" }
encoding_rs = "0.8"
fluvio = { version = "0.21", default-features = false, features = ["rustls"] }
futures = "0.3"
iggy = "0.2.6"
klickhouse = {version = "0.11"}
lru = "0.12"
petgraph = "0.6"
# default-features = false mitigates a warning of a yanked sub-sub dependency
rust_decimal = { version = "1", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
prost = "0.13.3"
tonic-health = "0.12.3"
tonic = "0.12.3"
tonic-build = "0.12.3"
warp = { version = "0.3", features = ["multipart"] }


