[package]
name = "flv_client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "flv_client"
path = "src/lib/mod.rs"


[dependencies]
# Internal crates
client_utils = { workspace = true }
common = { workspace = true }
sbe_messages = { workspace = true }
# External crates
futures = { workspace = true }
tokio = { workspace = true }
fluvio = { workspace = true }
