[package]
name = "common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# External crates
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
tokio-postgres = { workspace = true }
