[package]
name = "proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "proto"
path = "src/lib.rs"


[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }


[build-dependencies]
tonic-build = { workspace = true }

