[package]
name = "qd_client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "qd_client"
path = "src/lib/mod.rs"


[dependencies]
# Internal crates
common = { workspace = true }
sbe_messages = { workspace = true }
# External crates
tokio = { workspace = true }
fluvio = { workspace = true }
