[package]
name = "csv_import"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "csv_import"
path = "src/bin/csv_import/main.rs"


[dependencies]
# Internal crates
client_utils = { workspace = true }
common = { workspace = true }
db_specs = { workspace = true }
# External crates
csv = { workspace = true }
chrono = { workspace = true }
encoding_rs = { workspace = true }
klickhouse = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
