[package]
name = "data_importer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "import_kraken"
path = "src/bin/import_kraken_data/main.rs"


[lib]
name = "lib_import"
path = "src/lib/mod.rs"


[dependencies.common]
path = "../../flv_common"
version = "0.1.0"


[dependencies.db_quest_manager]
path = "../../flv_components/db_quest_manager"
version = "0.1.0"


[dependencies]
config-file = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
encoding_rs = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
