[package]
name = "data_importer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "import_kraken"
path = "src/bin/import_kraken_data/main.rs"


[lib]
name = "lib_import"
path = "src/lib/mod.rs"


[dependencies]
# Internal crates
common = { workspace = true }
db_quest_manager = { workspace = true }
db_specs = { workspace = true }
# External crates
config-file = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
encoding_rs = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
