[package]
name = "data_importer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "import_kraken"
path = "src/bin/import_kraken_data/main.rs"


[dependencies]
# Internal crates
common = { workspace = true }
client_utils = { workspace = true }
db_quest_manager = { workspace = true }
db_specs = { workspace = true }
