[package]
name = "msg_client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "msg_client"
path = "src/main.rs"


[lib]
name = "msg_manager"
path = "src/lib.rs"


[dependencies]
# Internal crates
common = { workspace = true }
sbe_messages = { workspace = true }
# External crates
futures = { workspace = true }
tokio = { workspace = true }
fluvio = { workspace = true }
