[package]
name = "client_login_errors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "client_login_errors"
path = "src/main.rs"


[dependencies]
# Internal crates
client_utils = { workspace = true }
common = { workspace = true }
sbe_messages = { workspace = true }
# External crates
futures = { workspace = true }
tokio = { workspace = true }
fluvio = { workspace = true }