[package]
name = "client_utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "client_utils"
path = "src/lib.rs"


[dependencies]
# Internal crates
common = { workspace = true }
sbe_messages = { workspace = true }
# External crates
futures = { workspace = true }
tokio = { workspace = true }
fluvio = { workspace = true }