[package]
name = "config_manager"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "config_manager"
path = "src/lib.rs"


[dependencies.common]
path = "../../flv_common"
version = "0.1.0"


[dependencies.db_specs]
path = "../../flv_specs/db_specs"
version = "0.1.0"


[dependencies.service_specs]
path = "../../flv_specs/service_specs"
version = "0.1.0"


[dependencies]
