[package]
name = "db_query_manager"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "db_query_manager"
path = "src/lib.rs"


[dependencies]
# Internal crates
common = { workspace = true }
# External crates
chrono = { workspace = true }
klickhouse = { workspace = true }
futures = { workspace = true }
#futures-util =  { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
clickhouse = { version = "0.11.6", features = ["test-util"] }