[package]
name = "db_query_managr"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "db_query_managr"
path = "src/lib.rs"


[dependencies.common]
path = "../../flv_common"
version = "0.1.0"


[dependencies]
postgres =  { workspace = true }
#postgres-types =  { workspace = true }