[package]
name = "db_quest_manager"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "db_quest_manager"
path = "src/lib.rs"


[dependencies]
# Internal crates
common = { workspace = true }
# External crates
chrono = {workspace = true }
questdb-rs =  { workspace = true }
rust_decimal =  { workspace = true }
