[package]
name = "symbol_manager"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "symbol_manager"
path = "src/lib.rs"


[dependencies]
# Internal crates
common = { workspace = true }
# External crates
lru =  { workspace = true }
