[package]
name = "causal_data_inference"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "causal_data_inference"
path = "src/main.rs"


[dependencies]
# Intrnal crates
causal_model =  { workspace = true }
common = { workspace = true }
config_manager = { workspace = true }
client_utils = { workspace = true }
qd_client = { workspace = true }
sbe_messages = { workspace = true }
# External crates
deep_causality =  {workspace = true}
fluvio = { workspace = true }
futures = {workspace = true}
rust_decimal = {workspace = true}
tokio = { workspace = true }
