[package]
name = "client_utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal dependencies
common = { workspace = true }
config_manager = { workspace = true }
db_query_manager = { workspace = true }
sbe_messages = { workspace = true }
symbol_manager = { workspace = true }
# External crates
futures = {workspace = true}
fluvio = { workspace = true }