[package]
name = "causal_data_inference"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "causal_data_inference"
path = "src/bin/main.rs"


[lib]
name = "lib_inference"
path = "src/lib/mod.rs"


[dependencies]
# Intrnal crates
common = { workspace = true }
client_utils = { workspace = true }
qd_client = { workspace = true }
sbe_messages = { workspace = true }
# External crates
chrono = {workspace = true}
deep_causality =  {workspace = true}
fluvio = { workspace = true }
futures = {workspace = true}
petgraph = { workspace = true}
rust_decimal = {workspace = true}
serde = { workspace = true }
tokio = { workspace = true }
