[package]
name = "causal_model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "lib_inference"
path = "src/lib.rs"


[dependencies]
# Intrnal crates
common = { workspace = true }

# External crates
deep_causality =  {workspace = true}
