[package]
name = "causal_model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lib]
name = "causal_model"
path = "src/mod.rs"


[dependencies]
# Intrnal crates
common = { workspace = true }

# External crates
chrono = {workspace = true}
deep_causality =  {workspace = true}
rust_decimal = {workspace = true}
