[package]
name = "qdgw"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "qdgw"
path = "src/main.rs"


[dependencies]
# Internal crates
common = {workspace = true}
config_manager = {workspace = true}
db_query_manager = {workspace = true}
iggy_utils = {workspace = true}
symbol_manager = {workspace = true}
sbe_messages = {workspace = true}
service_utils = {workspace = true}
# External crates
autometrics = { workspace = true }
futures = { workspace = true }
iggy = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
