[package]
name = "symdb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[[bin]]
name = "symdb"
path = "src/main.rs"


[dependencies]
# Internal crates
common = {workspace = true}
config_manager = {workspace = true}
db_query_manager = {workspace = true}
proto = {workspace = true}
symbol_manager = {workspace = true}


service_utils = {workspace = true}

# External crates
autometrics = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
warp = { workspace = true }
