[package]
name = "message_specs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true



[lib]
name = "message_specs"
path = "src/lib.rs"


[dependencies]
# Internal crates
common = {workspace = true}
# External crates
iggy = {workspace = true}